# mo434-dl-knowledge-distillation

./: .gitignore  COMMANDS.md  README.md  pyproject.toml
configs/: aircraft_convnext_tiny.yaml  aircraft_resnet50.yaml  food101_convnext_tiny.yaml  food101_resnet50.yaml
data/: README.md
notebooks/: analysis_aircraft.ipynb  analysis_food101.ipynb  best_students.ipynb
results/dataset_stats/: aircraft.json  food101.json
results/manifests/: planned.json
results/reports/: dataset_stats.md  report.md  training_epochs.csv  training_report.md  training_summary.csv
src/: __init__.py  run_experiments.py
src/data/: dataset_stats.py
src/datasets/: __init__.py  factory.py
src/evaluation/: compute_costs.py  evaluate.py  evaluate_rkd.py  report.py  visualize_features.py
src/models/: __init__.py  predictors.py  students.py  teachers.py
src/training/: common.py  train_student_baseline.py  train_student_distillation.py  train_student_rkd.py  train_teacher_classifier.py  training_report.py
src/utils/: checkpoints.py  config.py  losses.py  metrics.py
